tooling/nargo_cli/tests/snapshots/execution_success/side_effects_constrain_array/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
struct Bar {
    inner: [Field; 3],
}

fn main(y: pub u32) {
    let bar: Bar = Bar { inner: [100, 101, 102] };
    if y < 10 {
        assert(bar.inner == [100, 101, 102]);
    };
    if y > 10 {
        assert(bar.inner == [0, 1, 2]);
    }
}
